# gemma4-pl

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  pyproject.toml  requirements-cluster.txt  requirements-helios.txt
config/: base.yaml  eval.yaml  sft.yaml
scripts/: download_base_model.py  download_datasets.py  prepare_sft_data.py  run_eval.py
slurm/: download_data.sbatch  env.sh  eval.sbatch  sft.sbatch
src/bielik_r/: __init__.py  cli.py  config.py
src/bielik_r/data/: __init__.py
src/bielik_r/eval/: __init__.py
src/bielik_r/training/: __init__.py  sft.py
src/gemma4_pl/: __init__.py  cli.py  config.py
src/gemma4_pl/data/: __init__.py  loaders.py
src/gemma4_pl/eval/: __init__.py  perplexity.py
src/gemma4_pl/training/: __init__.py  sft.py
tests/: test_config.py  test_data.py  test_prepare.py
